crates/swc_ecma_parser/tests/typescript-errors/class/parameter-properties/input.ts.stderr
error: Parameter cannot have question mark and initializer
  --> $DIR/tests/typescript-errors/class/parameter-properties/input.ts:10:16
   |
10 |         public y?: number = 0) {}
   |                ^^^^^^^^^^

